--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.17.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
